<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_Main"
    tools:context="com.example.pourya.editor.add">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:gravity="end"
            >
            <TextView
                android:id="@+id/tv_toolbar_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_note"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:textColor="@color/color_toolbar_text"
                android:textSize="20sp"/>
            <!--<ImageView-->
                <!--android:id="@+id/ic_back"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:scaleType="fitXY"-->
                <!--android:src="@drawable/ic_arrow_forward_black_24dp"/>-->
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_add_edittext"
        android:hint="@string/text_hint_subject"
        android:id="@+id/et_subject_add"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>
    <EditText
        android:layout_weight="2"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/et_content_add"
        android:background="@color/color_add_edittext"
        android:hint="@string/text_hint_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:inputType="textMultiLine|textLongMessage"
        android:layout_margin="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit_add"
        android:textColor="@color/color_main_btn"
        android:background="@color/colorAccent"
        android:textSize="15sp"
        android:id="@+id/btn_submit_add"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:visibility="gone"
        android:textColor="@color/color_main_btn"
        android:background="@color/colorAccent"
        android:textSize="15sp"
        android:id="@+id/btn_edit"
        />

</LinearLayout>
